# internal-website-monitor-engine

./: .gitignore  README.md  TODOS.md  pyproject.toml
.github/workflows/: reusable-monitor.yml
docs/superpowers/plans/: 2026-04-01-content-stability-check.md  2026-04-11-knowledge-change-tracker-plan.md
docs/superpowers/specs/: 2026-04-01-content-stability-check-design.md  2026-04-11-knowledge-change-tracker-design.md
src/website_monitor/: __init__.py  __main__.py  knowledge.py  knowledge_diff.py  knowledge_report.py  monitor.py  notify.py  webhook.py
src/website_monitor_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/fixtures/accuracy-lab/: README.md  billing.html  hours.html  index.html
tests/fixtures/site-v1/: index.html  pricing.html
tests/fixtures/site-v2/: contact.html  index.html
tests/integration/: test_accuracy_lab.py  test_knowledge_pipeline.py  test_monitor_runner.py
tests/unit/: test_knowledge_diff.py  test_knowledge_extraction.py  test_knowledge_report.py  test_monitor_core.py  test_notifications.py  test_webhook.py
tests/workflow/: test_workflow_contract.py
