[project]
name = "website-monitor-engine"
version = "0.1.0"
description = "Shared GitHub Actions engine for monitoring website changes"
requires-python = ">=3.12"
dependencies = [
  "playwright==1.58.0",
  "google-genai>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
